首頁製作完成 #20151201

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8" lang="zh-tw">
 <meta name="description" content="合法營業貨車，安心有保障"/>
-<meta name="keywords" content="中華民國交通部公路總局臺中區監理所,微電影,卓越數位科技,開始設計工作室"/>
-<meta name="Author" content="中華民國交通部公路總局 Directorate General of Highways, Republic of China(Taiwan) " />
+<meta name="keywords" content="中華民國交通部,微電影,卓越數位科技,開始設計工作室"/>
+<meta name="Author" content="中華民國交通部 MINISTRY OF TRANSPORTATION AND COMMUNICATIONS R.O.C." />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>愛情不搬家 X 幸福請簽收-中華民國交通部公路總局臺中區監理所微電影網</title>
-<link rel="shortcut icon"  href="images/favicon.ico"/>
-<link rel="icon" href="images/favicon.ico"/>
+<title>單車跑跑GO X 機車行不行-中華民國交通部微電影網</title>
+<link rel="shortcut icon"  href="http://www.motc.gov.tw/favicon.ico"/>
+<link rel="icon" href="http://www.motc.gov.tw/favicon.ico"/>
 <link rel="stylesheet" href="css/pure-min.css"/>
-<link rel="stylesheet" href="css/xuedesign_201508.css"/>
+<link rel="stylesheet" href="css/xuedesign_201512.css"/>
 <link rel="stylesheet" href="css/jquery.fancybox.css"/>
 <link rel="stylesheet" href="css/fancybox-thumbs.css"/>
 <!--[if lt IE 9]>
@@ -31,35 +31,35 @@
    <div id="box_main">
       <div id="box_index">
          <header>
-            <h1><a href="http://tmv.thb.gov.tw/" rel="external" title="[另開視窗]交通部公路總局臺中區監理所">交通部公路總局臺中區監理所 Directorate General of Highways, Republic of China(Taiwan) </a></h1>
+            <h1><a href="http://www.motc.gov.tw/" rel="external" title="[另開視窗]中華民國交通部">中華民國交通部 MINISTRY OF TRANSPORTATION AND COMMUNICATIONS R.O.C.</a></h1>
          </header>
          <div id="box_content">
-            <div class="animated box_ani-01">
-                <h2 class="movie-title-01">愛情不搬家 Romance Remove</h2>
-                <div class="btn_play-01">
-                   <a  class="fancybox-media" href="https://www.youtube.com/watch?v=4QpUavy9ImQ" title="[影片播放] 愛情不搬家">[影片播放] 愛情不搬家</a>
-                </div>
+            <div><h2 class="movie-title-01">單車跑跑GO</h2></div>    
+            <div><h2 class="movie-title-02">機車行不行</h2></div>
+            <div id="box_safenote">
+                <h3>四大行車安全觀念</h3>
+                <ol>
+                    <li class="note_01">我看得見你，你看得見我。</li>
+                    <li class="note_02">利他的用路觀。</li>
+                    <li class="note_03">安全空間。</li>
+                    <li class="note_04">防衛兼顧的安全用路行為。</li>
+                </ol>
             </div>    
-            <h3 class="animated bounceInRight">合法營業貨車，安心有保障</h3>
-            <div class="animated box_ani-02">
-                  <h2 class="movie-title-02">幸福請簽收 Sign Your Name In My Heart</h2>
-                  <div class="btn_play-02">
-                     <a  class="fancybox-media" href="https://www.youtube.com/watch?v=N9T9EdScE2Y" title="[影片播放] 幸福請簽收">[影片播放] 幸福請簽收</a>
-                  </div>
-            </div>
-            <nav id="box_menu" class="animated fadeIn">
+            <nav id="box_menu"><!-- class="animated fadeIn" -->
                <ul>
-                  <li><a href="story.html" class="nav_01">劇情介紹</a></li>
-                  <li><a href="stills.html" class="nav_02">劇照花絮</a></li>
-                  <li><a href="profile.html" class="nav_03">單位簡介</a></li>
-                  <li><a href="link.html" class="nav_04">相關連結</a></li>
+                  <li><a href="video.html" class="nav_01">精彩影片</a></li>
+                  <li><a href="ppt.html" class="nav_02">行車懶人包</a></li>
+                  <li><a href="photo.html" class="nav_03">劇照花絮</a></li>
                </ul>
+               <br class="clean">
             </nav>
-            <div id="main-vision"></div>
-            <div id="truck"></div>
+            <div id="my_cloud"></div>
+            <div id="my_tree"></div>
+            <div id="my_bike"></div>
+            <div id="my_moto"></div>
          </div>
          <footer>
-            <p>交通部公路總局臺中區監理所 版權所有 Directorate General of Highways&copy; 2015 All RIGHTS RESERVED</p>
+            <p>交通部 版權所有 MINISTRY OF TRANSPORTATION AND COMMUNICATIONS R.O.C.&copy; 2015 All RIGHTS RESERVED</p>
             <span class="txt_ad">廣告</span>
          </footer>
          <p class="hidden">網站設計：開始設計工作室 xuedesign studio, http://www.xuedesign.tw/</p>
@@ -68,7 +68,7 @@
 </div> 
 
 <script src="http://code.jquery.com/jquery.min.js"></script>
-<script src="script/bgsize.js"></script>
+<!--<script src="script/bgsize.js"></script>-->
 <script src="script/jquery.fancybox.pack.js"></script>
 <script>
 $(document).ready(function(){$(".fancybox").fancybox();$(".fancybox-effects-a").fancybox({helpers:{title:{type:"outside"},overlay:{speedOut:0}}});$(".fancybox-effects-b").fancybox({openEffect:"none",closeEffect:"none",helpers:{title:{type:"over"}}});$(".fancybox-effects-c").fancybox({wrapCSS:"fancybox-custom",closeClick:!0,openEffect:"none",helpers:{title:{type:"inside"},overlay:{css:{background:"rgba(238,238,238,0.85)"}}}});$(".fancybox-effects-d").fancybox({padding:0,openEffect:"elastic",openSpeed:150,
