內容製作完畢 #20151203

--- a/photo.html
+++ b/photo.html
@@ -60,10 +60,216 @@
                           <!-- InstanceBeginEditable name="PageMain" -->
                           <div class="tab_container">
                             <div id="tab1" class="tab_content">
-                              <h3>【故事大綱】</h3>
+                              <ul class="list_photo">
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-01.jpg">
+                                        <img src="images/pic_bike-s-01.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-02.jpg">
+                                        <img src="images/pic_bike-s-02.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-03.jpg">
+                                        <img src="images/pic_bike-s-03.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-04.jpg">
+                                        <img src="images/pic_bike-s-04.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-05.jpg">
+                                        <img src="images/pic_bike-s-05.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-06.jpg">
+                                        <img src="images/pic_bike-s-06.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-07.jpg">
+                                        <img src="images/pic_bike-s-07.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-08.jpg">
+                                        <img src="images/pic_bike-s-08.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-09.jpg">
+                                        <img src="images/pic_bike-s-09.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-10.jpg">
+                                        <img src="images/pic_bike-s-10.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-11.jpg">
+                                        <img src="images/pic_bike-s-11.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-12.jpg">
+                                        <img src="images/pic_bike-s-12.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-13.jpg">
+                                        <img src="images/pic_bike-s-13.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-14.jpg">
+                                        <img src="images/pic_bike-s-14.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-15.jpg">
+                                        <img src="images/pic_bike-s-15.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-16.jpg">
+                                        <img src="images/pic_bike-s-16.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-17.jpg">
+                                        <img src="images/pic_bike-s-17.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-19.jpg">
+                                        <img src="images/pic_bike-s-19.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-20.jpg">
+                                        <img src="images/pic_bike-s-20.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-21.jpg">
+                                        <img src="images/pic_bike-s-21.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                               </ul>
+                               <br class="clean">    
                             </div>
+                            
+                            
                             <div id="tab2" class="tab_content">
-                              <h3>【故事大綱】</h3>
+                              <ul class="list_photo">
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-01.jpg">
+                                        <img src="images/pic_moto-s-01.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-02.jpg">
+                                        <img src="images/pic_moto-s-02.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-03.jpg">
+                                        <img src="images/pic_moto-s-03.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-04.jpg">
+                                        <img src="images/pic_moto-s-04.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-05.jpg">
+                                        <img src="images/pic_moto-s-05.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-06.jpg">
+                                        <img src="images/pic_moto-s-06.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-07.jpg">
+                                        <img src="images/pic_moto-s-07.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-08.jpg">
+                                        <img src="images/pic_moto-s-08.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-09.jpg">
+                                        <img src="images/pic_moto-s-09.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-10.jpg">
+                                        <img src="images/pic_moto-s-10.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-11.jpg">
+                                        <img src="images/pic_moto-s-11.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-12.jpg">
+                                        <img src="images/pic_moto-s-12.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-13.jpg">
+                                        <img src="images/pic_moto-s-13.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-14.jpg">
+                                        <img src="images/pic_moto-s-14.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-15.jpg">
+                                        <img src="images/pic_moto-s-15.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-16.jpg">
+                                        <img src="images/pic_moto-s-16.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-17.jpg">
+                                        <img src="images/pic_moto-s-17.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-18.jpg">
+                                        <img src="images/pic_moto-s-18.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-19.jpg">
+                                        <img src="images/pic_moto-s-19.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                                  <li>
+                                     <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-20.jpg">
+                                        <img src="images/pic_moto-s-20.jpg" alt="*"> 
+                                     </a>
+                                  </li>
+                               </ul>
+                               <br class="clean">
                             </div>
                           </div>
                           <!-- InstanceEndEditable -->
