--- a/ppt.html
+++ b/ppt.html
@@ -60,13 +60,11 @@
                           <!-- InstanceBeginEditable name="PageMain" -->
                           <div class="tab_container">
                             <div id="tab1" class="tab_content">
-                              <!--<iframe src='https://onedrive.live.com/embed?cid=B0E23FB75E8052B1&resid=B0E23FB75E8052B1%21383&authkey=AOUesGgumqQNRyE&em=2&wdAr=1.3333333333333333' width='507px' height='400px' frameborder='0'>這是 <a target='_blank' href='http://office.com/webapps'>Office Online</a> 提供的內嵌 <a target='_blank' href='http://office.com'>Microsoft Office</a> 簡報。</iframe>-->
-                              
-                              <iframe src="//www.slideshare.net/slideshow/embed_code/key/h5fmRR7ZFhhFZC" width="480" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+                               <iframe src="//www.slideshare.net/slideshow/embed_code/key/b1rUrALzH6g8c" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
                             </div>
                             
                             <div id="tab2" class="tab_content">
-                              <h3>【故事大綱】</h3>
+                              <iframe src="//www.slideshare.net/slideshow/embed_code/key/ygoLmaK75rLydB" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> 
                             </div>
                           </div>
                           <!-- InstanceEndEditable -->
