增加頁面動畫效果 #20151203

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <h1><a href="http://www.motc.gov.tw/" rel="external" title="[另開視窗]中華民國交通部">中華民國交通部 MINISTRY OF TRANSPORTATION AND COMMUNICATIONS R.O.C.</a></h1>
          </header>
          <div id="box_content">
-            <div><h2 class="movie-title-01">單車跑跑GO</h2></div>    
-            <div><h2 class="movie-title-02">機車行不行</h2></div>
+            <div class="animated ani-title01"><h2 class="movie-title-01">單車跑跑GO</h2></div>    
+            <div class="animated ani-title02"><h2 class="movie-title-02">機車行不行</h2></div>
             <div id="box_safenote">
-                <h3>四大行車安全觀念</h3>
+                <h3 class="animated pulse">四大行車安全觀念</h3>
                 <ol>
-                    <li class="note_01">我看得見你，你看得見我。</li>
-                    <li class="note_02">利他的用路觀。</li>
-                    <li class="note_03">安全空間。</li>
-                    <li class="note_04">防衛兼顧的安全用路行為。</li>
+                    <li class="note_01 animated fadeInDown-01">我看得見你，你看得見我。</li>
+                    <li class="note_02 animated fadeInDown-02">利他的用路觀。</li>
+                    <li class="note_03 animated fadeInDown-03">安全空間。</li>
+                    <li class="note_04 animated fadeInDown-04">防衛兼顧的安全用路行為。</li>
                 </ol>
             </div>    
-            <nav id="box_menu"><!-- class="animated fadeIn" -->
+            <nav id="box_menu" class="animated fadeInUp">
                <ul>
                   <li><a href="video.html" class="nav_01">精彩影片</a></li>
                   <li><a href="ppt.html" class="nav_02">行車懶人包</a></li>
