--- a/photo.html
+++ b/photo.html
@@ -60,6 +60,7 @@
                           <!-- InstanceBeginEditable name="PageMain" -->
                           <div class="tab_container">
                             <div id="tab1" class="tab_content">
+                              <div class="animated fadeInDown">
                               <ul class="list_photo">
                                   <li>
                                      <a class="fancybox-thumb" data-fancybox-group="item" href="images/pic_bike-01.jpg">
@@ -162,11 +163,13 @@
                                      </a>
                                   </li>
                                </ul>
-                               <br class="clean">    
+                               <br class="clean">
+                               </div>    
                             </div>
                             
                             
                             <div id="tab2" class="tab_content">
+                              <div class="animated fadeInDown">
                               <ul class="list_photo">
                                   <li>
                                      <a class="fancybox-thumb" data-fancybox-group="item2" href="images/pic_moto-01.jpg">
@@ -270,6 +273,7 @@
                                   </li>
                                </ul>
                                <br class="clean">
+                               </div>
                             </div>
                           </div>
                           <!-- InstanceEndEditable -->
@@ -277,7 +281,7 @@
                   </div>
                </div>
                <div id="mytree"></div>
-               <div id="mymoto"></div> 
+               <div id="mymoto" class="animated fadeInRight"></div> 
             </div>
             <br class="clean">
       </div>
