--- a/ppt.html
+++ b/ppt.html
@@ -60,11 +60,15 @@
                           <!-- InstanceBeginEditable name="PageMain" -->
                           <div class="tab_container">
                             <div id="tab1" class="tab_content">
+                               <div class="animated fadeInDown">
                                <iframe src="//www.slideshare.net/slideshow/embed_code/key/b1rUrALzH6g8c" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+                               </div>
                             </div>
                             
                             <div id="tab2" class="tab_content">
-                              <iframe src="//www.slideshare.net/slideshow/embed_code/key/ygoLmaK75rLydB" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> 
+                              <div class="animated fadeInDown">
+                              <iframe src="//www.slideshare.net/slideshow/embed_code/key/ygoLmaK75rLydB" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+                              </div> 
                             </div>
                           </div>
                           <!-- InstanceEndEditable -->
@@ -72,7 +76,7 @@
                   </div>
                </div>
                <div id="mytree"></div>
-               <div id="mymoto"></div> 
+               <div id="mymoto" class="animated fadeInRight"></div> 
             </div>
             <br class="clean">
       </div>
