--- a/video.html
+++ b/video.html
@@ -61,7 +61,7 @@
                           <div class="tab_container">
                             <div id="tab1" class="tab_content">
                             
-                               <div>
+                               <div class="animated fadeInDown">
                                    <img src="images/pic_videocover-01.jpg" alt="單車跑跑GO">
                                    <ul class="film_link">
                                       <li>
@@ -80,7 +80,7 @@
                             </div>
                             
                             <div id="tab2" class="tab_content">
-                                <div>
+                                <div class="animated fadeInDown">
                                    <img src="images/pic_videocover-02.jpg" alt="機車行不行">
                                    <ul class="film_link">
                                       <li>
@@ -103,7 +103,7 @@
                   </div>
                </div>
                <div id="mytree"></div>
-               <div id="mymoto"></div> 
+               <div id="mymoto" class="animated fadeInRight"></div> 
             </div>
             <br class="clean">
       </div>
